[package]
name = "spair"
version = "0.0.1"
authors = ["aclueless <61309385+aclueless@users.noreply.github.com>"]
edition = "2018"
description = "A framework for single-page application in Rust"
categories = ["wasm", "web-programming"]
keywords = ["SPA", "wasm", "framework"]
repository = "https://github.com/aclueless/spair"
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
http = "0.2"
js-sys = "0.3.36"
wasm-bindgen-futures = "0.4"
serde = "1.0"
serde_json = "1.0"

[dependencies.wasm-bindgen]
version = "0.2.59"

[dependencies.web-sys]
version = "0.3.36"
features = [
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Node",
    "Text",
    "Window",
    "Comment",
    "DomTokenList",
    "Location",
    # Events
    "Event",
    "MouseEvent",
    "InputEvent",
    "FocusEvent",
    "KeyboardEvent",
    "UiEvent",
    "WheelEvent",
    "EventTarget",
    "PopStateEvent",
    "HashChangeEvent",
    # Fetch
    "Request",
    "RequestInit",
    "Headers",
    "Response",
    "RequestCache",
    "RequestCredentials",
    "RequestRedirect",
    "RequestMode",
    "ReferrerPolicy",
    # "",
]

[workspace]
members = [
    "examples/counter",
    "examples/fetch",
    "examples/todomvc",
]