[package]
name = "spair"
version = "0.0.9"
authors = ["aclueless <61309385+aclueless@users.noreply.github.com>"]
edition = "2021"
description = "A framework for single-page application in Rust"
categories = ["wasm", "web-programming"]
keywords = ["SPA", "wasm", "framework"]
repository = "https://github.com/aclueless/spair"
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
keyed-list = ["uuid"]
svg = []
queue-render = []
nightly-text-render = []

[workspace]
members = [
    "examples/*",
    # "crates/*"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-logger = "0.2"

[dependencies]
log = "0.4"
thiserror = "1.0"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
uuid = { version = "1", optional = true }
duplicate = "1.0.0"

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlOptionElement",
    "HtmlTextAreaElement",
    "HtmlFormElement",
    "Node",
    "Text",
    "Window",
    "Comment",
    "DomTokenList",
    "Location",
    "History",
    "Storage",
    # Events
    "Event",
    "MouseEvent",
    "InputEvent",
    "FocusEvent",
    "KeyboardEvent",
    "UiEvent",
    "WheelEvent",
    "EventTarget",
    "PopStateEvent",
    "HashChangeEvent",
    "ClipboardEvent",
    # Scroll into view
    "ScrollBehavior",
    "ScrollLogicalPosition",
    "ScrollIntoViewOptions",
]
