[package]
name = "spair"
version = "0.0.10"
edition = "2024"
authors = ["aclueless <61309385+aclueless@users.noreply.github.com>"]
description = "A framework for single-page application in Rust"
categories = ["wasm", "web-programming"]
keywords = ["SPA", "wasm", "framework"]
repository = "https://github.com/aclueless/spair"
license = "MPL-2.0"
readme = "README.md"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
log="0.4"
# rustc-hash = "2"
wasm-bindgen-futures = "0.4"

spair-macros = { path = "../spair-macros" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "History",
  "Document",
  "Element",
  "DocumentFragment",
  "HtmlTemplateElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "HtmlAnchorElement",
  "HtmlAreaElement",
  "Event",
  "MouseEvent",
  "InputEvent",
  "FocusEvent",
  "KeyboardEvent",
  "WheelEvent",
  "EventTarget",
  "Location",
  "PopStateEvent",
  "ClipboardEvent",
  "DataTransfer",
  "DomTokenList",
  "Text",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
