[package]
name = "spairc"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
log="0.4"
rustc-hash = "2"
wasm-bindgen-futures = "0.4"

spair-macros = { path = "../spair-macros" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "History",
  "Document",
  "Element",
  "DocumentFragment",
  "HtmlTemplateElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "HtmlAnchorElement",
  "HtmlAreaElement",
  "Event",
  "MouseEvent",
  "InputEvent",
  "FocusEvent",
  "KeyboardEvent",
  "WheelEvent",
  "EventTarget",
  "Location",
  "PopStateEvent",
  # "ClipboardEvent",
  "DomTokenList",
  "Text",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
