[package]
name = "fetch"
version = "0.1.0"
authors = ["aclueless <61309385+aclueless@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-net = { version = "0.2.4", default-features = false, features = ["http", "json"] }
serde = { version = "1.0", features = ["derive"] }
spair = { path = "../../" }
wasm-bindgen = "0.2"
