[package]
name = "future"
version = "0.1.0"
authors = ["aclueless <61309385+aclueless@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"]  }
spair = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
