[package]
name = "svg_clock"
version = "0.1.0"
authors = ["aclueless <61309385+aclueless@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spair = { path = "../../", features = ["svg"] }
js-sys = "0.3"
#wasm-logger = "0.2"
gloo-timers = "0.2"
