[package]
name = "todomvc"
version = "0.1.0"
authors = ["aclueless <61309385+aclueless@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
spair = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# log = "0.4"
# wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3.36"
features = [
    "Node",
    "Event",
    "KeyboardEvent",
    "FocusEvent",
    "HtmlInputElement",
    "FocusEvent",
    "KeyboardEvent",
    "Storage",
]