[package]
name = "spair2"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
log="0.4"
rustc-hash = "2"
wasm-bindgen-futures = "0.4"

spair-macros = { path = "../spair-macros", package = "spair2-macros" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "History",
  "Document",
  "Element",
  "DocumentFragment",
  "HtmlTemplateElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "HtmlAnchorElement",
  "HtmlAreaElement",
  "Event",
  "MouseEvent",
  "InputEvent",
  "FocusEvent",
  "KeyboardEvent",
  "WheelEvent",
  "EventTarget",
  "Location",
  "PopStateEvent",
  "ClipboardEvent",
  "DataTransfer",
  "DomTokenList",
  "Text",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
